2.16.1 (04-06-2019)
2.16.0 (16-05-2019)
- Improvement: AverageEntry API cleanup  
- Bug Fix: Collecting target curriculum lines for ICurriculumEntry requires curricular plan because this information is specific to calculated curriculum / curricular plan


2.15.0 (11-05-2019)
- Improvement: added accepted values implementation to qualitative grades